--- a/eventi/san-silvestro-2017.html
+++ b/eventi/san-silvestro-2017.html
@@ -5,27 +5,27 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Cenone di San Silvestro</title>
-    <meta name="description" content="31 Dicembre ore 20:30. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
+    <meta name="description" content="31 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di Aceto Balsamico Extra Vecchio di Modena."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Cena di San Silvestro"/>
-    <meta name="twitter:description" content="31 Dicembre ore 20:30. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
-    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2016.jpg"/>
-    <meta name="twitter:url" content="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
+    <meta name="twitter:description" content="31 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di Aceto Balsamico Extra Vecchio di Modena."/>
+    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2017.jpg"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it/eventi/san-silvestro-2017.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
+    <meta property="og:url" content="http://www.beerstrot.it/eventi/san-silvestro-2017.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cena di San Silvestro"/>
-    <meta property="og:description" content="31 Dicembre ore 21:15. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
-    <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2016.jpg"/>
+    <meta property="og:description" content="31 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di Aceto Balsamico Extra Vecchio di Modena"/>
+    <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2017.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
+    <link rel="canonical" href="http://www.beerstrot.it/eventi/san-silvestro-2017.html"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -75,7 +75,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/san-silvestro-2016.jpg" alt="Cena di San Silvestro" />
+    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/san-silvestro-2017.jpg" alt="Cena di San Silvestro" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
@@ -88,7 +88,7 @@
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
-                                <h5 class="date" style="margin-top: 0.5em;">31 Dicembre 2016</h5>
+                                <h5 class="date" style="margin-top: 0.5em;">31 Dicembre 2017</h5>
                                 <h5>Alle 20:30</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
@@ -98,41 +98,55 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
-                <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù speciale</strong> a 65€ bevande incluse.</p>
+                <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù</strong> a 65€ bevande incluse e una bottiglia di spumante ogni 4 persone per il "botto".</p>
+                <p>Il filo conduttore del menù sono i prodotti dei salumifici e dei caseifici jesini e modenesi, uniti dall'aceto balsamico extra vecchio di Modena.</p>
                 <p>Prenotazone richiesta. Affrettati: abbiamo solo 60 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
-                <h3 class="subheader">Aperitivo di Benvenuto</h3>
-                <ul>
-                    <li>Cocktail e stuzzichini</li>
-                </ul>
                 <h3 class="subheader">Antipasti</h3>
                 <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Cannellone di verza ripieno di patate e pancetta</li>
-                    <li>Sformatino di funghi di bosco</li>
-                    <li>Insalata fresca di finocchio, arance e olive taggiasche</li>
+                    <li>Prosciutto di Parma 24 Mesi</li>
+                    <li>Ciauscolo senza conservanti</li>
+                    <li>Ricotta di Vacca con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
+                    <li>Crema di Lenticchie di Col fiorito con Zampone di Modena</li>
                 </ul>
-                <h3 class="subheader">Primi</h3>
-                <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
+                <h3 class="subheader">Primo</h3>
+                <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Tortellini in brodo</li>
-                    <li>Lasagne bianche al radicchio, noci e funghi</li>
+                    <li>Tortelloni fatti in casa con ripieno di ricotta conditi con burro e salvia</li>
                 </ul>
                 <h3 class="subheader">Secondo</h3>
-                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
+                <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Tris di mini burgers di manzo, cotechino e pollo serviti con lenticchie e coleslow</li>
+                    <li>180 grammi di Hamburger di Manzo, Parmigiano Reggiano invecchiato 36 mesi, Rucola, Aceto Balsamico Tradizionale di Modena invecchiato almeno 12 anni</li>
+                    <li>Parmigiano Reggiano invecchiato 36 mesi servito a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
-                <h3 class="menu-subheader"><small>Servito con Prosecco Extra Dry o Dolce</small></h3>
+                <!-- <h3 class="menu-subheader"><small>Servito con Prosecco Extra Dry o Dolce</small></h3> -->
                 <ul>
-                    <li>Sformatino di panettone e cioccolato bianco</li>
+                    <li>Tris di dolci con Cheesecake, Sacher, Blondie</li>
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
+                <h2>Gli Ingredienti</h2>
+                <ul>
+                    <li>Prosciutto di Parma invecchiato 24 Mesi del Salumificio Giovetti Renzo di Modena</li>
+                    <li>Ciauscolo senza conservanti della Macelleria Sandroni Gianni di Cingoli di Macerata</li>
+                    <li>Parmigiano Reggiano invecchiato 36 mesi del Caseificio Valtiepido di Castelvetro di Modena</li>
+                    <li>Ricotta di Vacca del Caseificio Piandelmedico di Jesi</li>
+                    <li>Burro del Caseificio Piandelmedico di Jesi</li>
+                    <li>Aceto Balsamico Tradizionale di Modena Extra Vecchio di nostra produzione, invecchiato in botti di rovere, castagno e gelso almeno 30 anni, </li>
+                    <li>Aceto Balsamico Tradizionale di Modena di nostra produzione, invecchiato in botti di rovere, castagno e gelso almeno 12 anni</li>
+                    <li>Tortelloni fatti a mano di nostra produzione</li>
+                    <li>Manzo per Hamburger proveniente da Vacche Marchigiane nutrite esclulsivamente con semi di lino.</li>
+                    <li>Zampone del Salumifici Bellucci di Castelnuovo di Modena</li>
+                </ul>
+                <hr>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
             </div>
         </article>
     </div>
@@ -147,13 +161,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/eventi/san-silvestro-2016.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/eventi/san-silvestro-2017.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/eventi/san-silvestro-2016.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/eventi/san-silvestro-2017.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/eventi/san-silvestro-2016.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/eventi/san-silvestro-2017.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
