--- a/asporto/index.html
+++ b/asporto/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Consegna a domicilio:</strong> gli hamburger a casa tua a soli 1,5€ per la consegna, gratis per ordini superiori ai 40€.</h4>
+                <h4><strong>Consegna a domicilio:</strong> gli hamburger a casa tua a soli 1,5€, gratis per ordini superiori ai 40€.</h4>
             </div>
         </div>
         <div class="row show-for-small">
