--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
-				<p>Siamo aperti il <strong>24 Aprile</strong>, Il <strong>30 Aprile</strong> e il <strong>1 Maggio</strong>: dalle 19:00 alle 23:00</p>
+				<p>Siamo aperti il <strong>30 Aprile</strong> e il <strong>1 Maggio</strong>: dalle 19:00 alle 23:00</p>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<h2>Asporto e Consegne</h2>
@@ -209,28 +209,28 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 					<li>
-						<h4 class="subheader">Dove siamo</h4>
-						<p>
-							<a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-								<span itemprop="streetAddress">Via Centofinestre, 20</span>
-								<br>
-								<span itemprop="postalCode">60024</span>
-								<span itemprop="addressLocality">Filottrano</span>
-								<span itemprop="addressRegion">AN</span>
-								<br class="hide-for-small">
-								<span class="hide-for-small" itemprop="addressCountry">Italia</span>
-							</a>
-						</p>
-					</li>
-					<li>
-						<h4 class="subheader">Orari apertura</h4>
-						<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
-						<div class="row">
-							<div class="large-12 medium-12 small-12 columns">
-								<p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
-							</div>
-						</div>
-					</li>
+                        <h4 class="subheader">Orari apertura</h4>
+                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                        <div class="row">
+                            <div class="large-12 medium-12 small-12 columns">
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                            </div>
+                        </div>
+                    </li>
+		  			<li>
+		  				<h4 class="subheader">Dove siamo</h4>
+		                <p>
+		                    <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+		                        <span itemprop="streetAddress">Via Centofinestre, 20</span>
+		                        <br>
+		                        <span itemprop="postalCode">60024</span>
+		                        <span itemprop="addressLocality">Filottrano</span>
+		                        <span itemprop="addressRegion">AN</span>
+		                        <br class="hide-for-small">
+		                        <span class="hide-for-small" itemprop="addressCountry">Italia</span>
+		                    </a>
+		                </p>
+		            </li>
 					<li>
 						<h4 class="subheader">Accettiamo</h4>
 						<ul class="block-grid-cards-3">
