--- a/menu/index.html
+++ b/menu/index.html
@@ -413,15 +413,19 @@
                             <p>valmusone</p>
                         </li>
                         <li>
-                            <h3>Syrah IGT &emsp;25</h3>
-                            <p>valmusone</p>
-                        </li>
-                        <li>
-                            <h3>Misco Verdicchio Jesi &emsp;15</h3>
+                            <h3>Libenter DOC &emsp;19</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Prosecco DOCG Extra Dry &emsp;15</h3>
+                            <h3>Costa Verde DOC &emsp;18</h3>
+                            <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Misco Superiore DOC &emsp;18</h3>
+                            <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Prosecco Trèser DOCG &emsp;15</h3>
                             <p>cantina serre di pederiva</p>
                         </li>
                     </ul>
