--- a/menu/index.html
+++ b/menu/index.html
@@ -285,28 +285,28 @@
                             <p>bionda fruttata 5,0%</p>
                         </li>
                         <li>
-                            <h3>Zotler Korbinian &emsp;  4 / 6</h3>
-                            <p>rossa stile tedesco 5,2%</p>
+                            <h3>Gambrinus Weisse &emsp;  4 / 6</h3>
+                            <p>weisse 5,2%</p>
                         </li>
                         <li>
                             <h3>Castelli Palmares &emsp;  4 / 6</h3>
                             <p>rossa stile inglese 5,6%</p>
                         </li>
-                        <li>
-                            <h3>Mukkeller Mr Wolf &emsp;  4 / 6</h3>
-                            <p>triple 9,2%</p>
-                        </li>
-                                                <li>
-                            <h3>MC-77 Glu Glu Kolsh  &emsp;  4 / 6</h3>
-                            <p>kolsh 5,0%</p>
-                        </li>
-                        <li>
+                         <li>
                             <h3>Castelli Mirabilia &emsp;  4 / 6</h3>
                             <p>american pale ale 6,5%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
-                            <p>doppia ipa amara 8,2%</p>
+                            <h3>Mukkeller Tulio &emsp;  4 / 6</h3>
+                            <p>rye ipa 6,5%</p>
+                        </li>
+                                                <li>
+                            <h3>MC-77 Rockstone  &emsp;  4 / 6</h3>
+                            <p>ipa affumicata 6,4%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Mazzu de Fiuri &emsp;  4 / 6</h3>
+                            <p>ipa 6,5%</p>
                         </li>
                     </ul>
                 </div>
@@ -325,25 +325,20 @@
                                 <p>Keller con finale secco 4,8%</p>
                             </li>
                             <li>
-                                <h3>Zotler 1447 50cl &emsp; 6</h3>
-                                <p>bionda non filtrata tedesca 4,9%</p>
+                                <h3>Zotler Oster Bier 50cl &emsp; 6</h3>
+                                <p>marzen tedesca 5,5% </p>
                             </li>
                             <li>
-                                <h3>Zotler Fest Bier 50cl &emsp; 6</h3>
-                                <p>marzen tedesca 5,8%</p>
-                            </li>
-                            <li>
-                                <h3>Zotler Weisse 50cl &emsp; 6</h3>
+                                <h3>Irseer Weisse 50cl &emsp; 6</h3>
                                 <p>weisse 5,2% </p>
                             </li>
                             <li>
-                                <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
-                                <p>weisse 5,2% </p>
+                                <h3>Irseer Klosterstark 50cl &emsp; 6</h3>
+                                <p>abazzia 7% </p>
                             </li>
-                            <
                             <li>
-                                <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
-                                <p>ale 6% </p>
+                                <h3>Mukkeller PSE 50cl &emsp; 6</h3>
+                                <p>ale 5,6% </p>
                             </li>
                             <li>
                                 <h3>Mukkeller Marina 50cl &emsp; 6</h3>
@@ -354,16 +349,8 @@
                                 <p>rye IPA 6,5%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Hattori 50cl &emsp; 6</h3>
-                                <p>doppia IPA 8,2%</p>
-                            </li>
-                            <li>
-                                <h3>Mukkeller Mr Wolf 33cl &emsp; 6</h3>
-                                <p>belgian triple 9,2%</p>
-                            </li>
-                            li>
-                                <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
-                                <p>barley wine 10,5% </p>
+                                <h3>MC-77 Bow Tie 33cl &emsp; 6</h3>
+                                <p>IPA 6,3%</p>
                             </li>
                             <li>
                                 <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
@@ -372,6 +359,10 @@
                             <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>nera tedesca 5,5% </p>
+                            </li>
+                            <li>
+                                <h3>Castelli Calix 33cl &emsp; 6</h3>
+                                <p>Stout 6,7%</p>
                             </li>
                             <li>
                                 <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
