--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
 			</div>
 			<div class="medium-6 large-6 columns">
 				<h2>Asporto</h2>
-				<p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
-				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
+				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
 				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p>
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
 				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
