--- a/menu/index.html
+++ b/menu/index.html
@@ -275,6 +275,10 @@
                                 <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
                             </li>
                             <li>
+                                <h3>Birramisù <span class="price">5</span></h3>
+                                <p>Tiramisù con mascarpone artigianale alla birra stout</p>
+                            </li>
+                            <li>
                                 <h3>Biscotti Secchi e Visciola <span class="price">5,5</span></h3>
                                 <p>Cantucci e anicetti artigianali, serviti con vino di visciole</p>
                             </li>
