--- a/menu/index.html
+++ b/menu/index.html
@@ -279,8 +279,8 @@
                                 <p>Tiramisù con mascarpone artigianale alla birra stout</p>
                             </li>
                             <li>
-                                <h3>Biscotti Secchi e Visciola <span class="price">5,5</span></h3>
-                                <p>Cantucci e anicetti artigianali, serviti con vino di visciole</p>
+                                <h3>Cantucci e Visciola <span class="price">5,5</span></h3>
+                                <p>Cantucci artigianali, serviti con vino di visciole</p>
                             </li>
                         </ul>
                         <br>
