--- a/asporto/index.html
+++ b/asporto/index.html
@@ -279,7 +279,7 @@
                             </li>
                             <li>
                                 <h3>Blondie <span class="price">5</span></h3>
-                                <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
+                                <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
                             </li>
                         </ul>
                         <br>
