--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
 				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-				<p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
+				<p>Fino al 24 Novembre siamo aperti solo per gli asporti. Per ritirare gli asporti è obbligatorio l'utilizzo della mascherina.</p>
+				<p>Colonnine con gel igienizzante sono dislocate all'entrata e nei pressi dell'area di ritiro dell'asporto.</p>
+				<!-- <p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
 				<p>Prestiamo tutte le attenzioni possibili all'emergenza sanitaria in corso con un insieme di regole che ci permetteranno di passare una serata rilassata e serena.</p>
 				<p>Per venire a Ca' Vecchia Beerstrot assicuriamoci di leggere e condividere il regolamento Covid</p>
-				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a>
+				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a> -->
 			</div>
 		</div>
 	</div>
