--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
 						<!-- <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p> -->
 					</li>
 					<li>
-                        <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
-                        <div class="row">
-                            <div class="large-12 medium-12 small-12 columns">
-                                <p><strong>Venerdì, Sabato e Domenica</strong>: asporto con consumazione anche ai tavoli in esterno. <br><strong>Dalle 18:00 alle 21:30</strong></p>
-                            </div>
-                        </div>
-                    </li>
+                       	<h4 class="subheader">Orari</h4>
+                       	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                       	<div class="row">
+                       		<div class="large-12 medium-12 small-12 columns">
+                       			<p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
+                       			<br><strong>Dalle 18:00 alle 21:30</strong></p>
+                       		</div>
+                       	</div>
+                 	</li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
 		                <p>
