--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                        	<div class="row">
                        		<div class="large-12 medium-12 small-12 columns">
                                 <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
-                                <br><strong>Dalle 18:00 alle 21:30</strong></p>
+                                <br><strong>Dalle 18:00 alle 21:30.</strong></p>
                                 <p>Non si accettano prenotazioni per i tavoli.</p>
                             </div>
                        	</div>
