--- a/menu/index.html
+++ b/menu/index.html
@@ -600,6 +600,29 @@
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Drinks</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Spritz <span class="price">5</span></h3>
+                            <p>Aperol, Campari</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Ginepraio<span class="price">9</span></h3>
+                            <p>Biologico. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Ginpilz<span class="price">8</span></h3>
+                            <p>Aromatico. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                        <li>
+                            <h3>Gin Tonic Silverback<span class="price">8</span></h3>
+                            <p>London Gin. Servito con acqua tonica J. Gasco</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
 <!-- vino fine -->
 <!-- Bevande -->
