--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
 				<h2>Ristorante</h2>
 				<p><strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: <strong>dalle 18:00 alle 21:30</strong></p>
 				<p>Prendi l'asporto e consumalo ai tavoli in esterno. <br>Ordina una birra, un bicchiere di vino o uno spritz e goditi i fantastici tramonti di Ca' Vecchia.</p>
-				<p><strong>Non è necessario prenotare.</strong></p>
+				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
+
+				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
 				<!-- <h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p> -->
                 <!-- <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
@@ -268,7 +271,7 @@
                        		<div class="large-12 medium-12 small-12 columns">
                                 <p><strong>Venerdì, Sabato, Domenica</strong>: asporto con consumazione anche ai tavoli in esterno.
                                 <br><strong>Dalle 18:00 alle 21:30.</strong></p>
-                                <p>Non è necessario prenotare.</p>
+
                             </div>
                        	</div>
                  	</li>
