--- a/menu/index.html
+++ b/menu/index.html
@@ -367,7 +367,7 @@
                         </li>
                         <li>
                             <h3>Thee Bitter</h3>
-                            <p>Ambrata stile bitter inglese 4,2% <br><em>Birrificio Resina</em></p>
+                            <p>Bitter inglese 4,2% <br><em>Birrificio Resina</em></p>
                         </li>
                         <!-- <li>
                             <h3>Citrano</h3>
